fixed small typo

--- a/search.html
+++ b/search.html
@@ -79,7 +79,7 @@
           });
         });
 
-        search_widget.on("search-clear", (response) => {
+        search_widget.on("search-clear", () => {
           results_node.innerHTML = "";
         });
 
